# BlueNaaS-Subcellular

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitreview  CONTRIBUTING.md  Makefile  README.md  SYSTEM-DESIGN.md  authors.txt  backup.sh  castor.env  cronjob.yaml  jsconfig.json  pgpass  postgres.Dockerfile
.github/workflows/: docker-image.yml  ebrains.yml  push.yml
backend/: .dockerignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  copy-circuit-data.sh  deploy.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
backend/docs/: docs.html
backend/docs/Subcellular application — HBP Brain Simulation Platform Guidebook 0.1.1 documentation_files/: bsp.css  extra.js  gb_prod_analytics.js  js  load_ga.js
backend/non-multi-stage-build/: Dockerfile  assets.Dockerfile  build.sh
backend/subcellular_experiment/: api.py  backend.py  bng.py  bngl_extended_model.py  db.py  enums.py  envvars.py  geometry.py  gmltojson.py  logger.py  main.py  model_export.py  model_import.py  model_to_bngl.py  nf_sim.py  sbml_to_bngl.py  settings.py  sim.py  sim_manager.py  sim_worker.py  steps_sim.py  types.py  utils.py  viz.py  worker_message.py
backend/tools/: generate-morphology-list.py
frontend/: .dockerignore  Dockerfile  Makefile  build.Dockerfile  build.sh  deploy.sh  jsconfig.json  nginx.conf  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  cell_proteins_reduced.json  config.js  config.ts  constants.js  constants.ts  main.js  main.ts  router.js  router.ts  (+4 more)
(+191 files in other folders)
